--- a/Project2/src/Project2/wwwroot/defaultnavbar.html
+++ b/Project2/src/Project2/wwwroot/defaultnavbar.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Bootstrap site</title>
+    <title></title>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/lib/bootswatch/cerulean/bootstrap.css" />
     <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.css" />
 </head>
 <body>
-<!--navbar is the base class and default applies normal colors-->
+    <!--navbar is the base class and default applies normal colors-->
 <nav class="navbar navbar-default">
     <!-- fluid ensures navbar is stretched across the page-->
     <div class="container-fliud">
@@ -28,45 +28,17 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-
-                <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/resume.html">Resume</a></li>
+                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Link</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/contact.html">Contact Me</a></li>
+                <li><a href="#">Contact Me</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<div class="container">
-    <p>above the article tags but in container</p>
-    <article>
-        <header>
-            <h1 id="sweeth1">Generic Page header in article</h1>
-        </header>
-        <section>
-            <section>
-                <h1>H1 first section 1</h1>
-                <p>paragraph section 1</p>
-            </section>
-            <section>
-                <h1>H1 first section 2</h1>
-                <p>paragraph section 2</p>
-
-                <ol>
-                    <li>I wrote it</li>
-                    <li>That's all the reasons we need</li>
-                </ol>
-            </section>
-
-        </section>
-        <footer>
-            Footer info
-        </footer>
-    </article>
-</div>
     <!-- Dropdown uses jquery so it is required IF used by bootstrap-->
-<script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
