--- a/Project2/src/Project2/wwwroot/index.html
+++ b/Project2/src/Project2/wwwroot/index.html
@@ -5,7 +5,7 @@
     <title>Bootstrap site</title>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/lib/bootswatch/cerulean/bootstrap.css" />
-    <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.min.css" />
 </head>
 <body>
 <!--navbar is the base class and default applies normal colors-->
@@ -22,18 +22,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand"><i class="fa fa-home"></i> Afton Martin</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
 
-                <li><a href="/blog.html">Blog</a></li>
-                <li><a href="/resume.html">Resume</a></li>
+                <li><a href="/blog.html"><i class="fa fa-book"></i> Blog</a></li>
+                <li><a href="/resume.html"><i class="fa fa-bar-chart"></i> Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/contact.html">Contact Me</a></li>
+                <li><a href="/contact.html"><i class="fa fa-bullhorn"></i> Contact Me</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
