--- a/Project2/src/Project2/wwwroot/resume.html
+++ b/Project2/src/Project2/wwwroot/resume.html
@@ -2,10 +2,44 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Resume</title>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="/lib/bootswatch/cerulean/bootstrap.css" />
+    <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.min.css" />
 </head>
 <body>
-    <p>resume</p>
+    <!--navbar is the base class and default applies normal colors-->
+    <nav class="navbar navbar-default">
+        <!-- fluid ensures navbar is stretched across the page-->
+        <div class="container-fliud">
+            <!-- Brand and mobile toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <!-- hook together with data-target -->
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <!-- Three lines make a hamburger -->
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand"><i class="fa fa-home"></i> Afton Martin</a>
+            </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+
+                    <li><a href="/blog.html"><i class="fa fa-book"></i> Blog</a></li>
+                    <li><a href="/resume.html"><i class="fa fa-bar-chart"></i> Resume</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/contact.html"><i class="fa fa-bullhorn"></i> Contact Me</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <!-- Dropdown uses jquery so it is required IF used by bootstrap-->
+    <script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
