fixed links in navbar

--- a/Project2/src/Project2/wwwroot/blog.html
+++ b/Project2/src/Project2/wwwroot/blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Blog</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/lib/bootswatch/cerulean/bootstrap.css" />
     <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.min.css" />
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand"><i class="fa fa-home"></i> Afton Martin</a>
+                <a href="/index.html" class="navbar-brand"><i class="fa fa-home"></i> Afton Martin</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
