--- a/Project2/src/Project2/wwwroot/contact.html
+++ b/Project2/src/Project2/wwwroot/contact.html
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand"><i class="fa fa-home"></i> Afton Martin</a>
+                <a href="/index.html" class="navbar-brand"><i class="fa fa-home"></i> Afton Martin</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
