--- a/Project2/src/Project2/wwwroot/resume.html
+++ b/Project2/src/Project2/wwwroot/resume.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <title>Resume</title>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="/lib/bootswatch/cerulean/bootstrap.css" />
+    <link rel="stylesheet" href="/lib/bootswatch/cosmo/bootstrap.css" />
     <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.min.css" />
 </head>
 <body>
     <!--navbar is the base class and default applies normal colors-->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
         <!-- fluid ensures navbar is stretched across the page-->
         <div class="container-fliud">
             <!-- Brand and mobile toggle get grouped for better mobile display -->
