--- a/Project2/src/Project2/wwwroot/index.html
+++ b/Project2/src/Project2/wwwroot/index.html
@@ -6,39 +6,40 @@
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/lib/bootswatch/cosmo/bootstrap.css" />
     <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
     <!--navbar is the base class and invert changes normal colors-->
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <!-- fluid ensures navbar is stretched across the page-->
-        <div class="container-fliud">
-            <!-- Brand and mobile toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <!-- hook together with data-target -->
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <!-- Three lines make a hamburger -->
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a href="/index.html" class="navbar-brand"><i class="fa fa-home"></i> Afton Martin</a>
-            </div>
+        <!-- <div class="container-fliud"> -->
+        <!-- Brand and mobile toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <!-- hook together with data-target -->
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <!-- Three lines make a hamburger -->
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="/index.html" class="navbar-brand"><i class="fa fa-home"></i> Afton Martin</a>
+        </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
 
-                    <li><a href="/blog.html"><i class="fa fa-book"></i> Blog</a></li>
-                    <li><a href="/resume.html"><i class="fa fa-bar-chart"></i> Resume</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/contact.html"><i class="fa fa-bullhorn"></i> Contact Me</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+                <li><a href="/blog.html"><i class="fa fa-book"></i> Blog</a></li>
+                <li><a href="/resume.html"><i class="fa fa-bar-chart"></i> Resume</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/contact.html"><i class="fa fa-bullhorn"></i> Contact Me</a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+        <!--</div>-->
     </nav>
-    <div id="abouttext" class="container">
+    <div id="abouttext" class="container-fluid">
         <div id="col1" class="col-md-4">
             <article>
                 <header>
@@ -78,9 +79,9 @@
 
         </div>
         <div id="col3"class="col-md-5 hidden-sm hidden-xs">
-            <article>
-                <img src="self.JPG" class="img-rounded img-responsive" alt="Afton Martin" width="304" height="236">
-             </article>
+            
+                <img src="self.JPG" class="img-responsive img-circle" alt="Afton Martin" width="200" height="200">
+             
         </div>
     </div>
     <!-- Dropdown uses jquery so it is required IF used by bootstrap-->
