--- a/Project2/src/Project2/wwwroot/resume.html
+++ b/Project2/src/Project2/wwwroot/resume.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/lib/bootswatch/cosmo/bootstrap.css" />
     <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <!--navbar is the base class and default applies normal colors-->
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <!-- fluid ensures navbar is stretched across the page-->
-        <div class="container-fliud">
+        <div class="container-fluid">
             <!-- Brand and mobile toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <!-- hook together with data-target -->
@@ -38,8 +39,73 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-    <!-- Dropdown uses jquery so it is required IF used by bootstrap-->
-    <script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-4">
+        <h3>Education</h3>
+
+        <ul class="list-unstyled list-unstyled-left">
+
+            <li>Currently Attending: University of Central Oklahoma</li>
+            <li><hr/></li>
+            <li>Bachelor of Science in Computer Science</li>
+            <li>109 of 124 hours completed</li>
+
+        </ul>
+
+        <h3>Proficiency In</h3>
+
+        <ul class="list-unstyled list-unstyled-left">
+            <li>C++
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                        60%
+                    </div>
+                </div>
+            </li>
+            <li>Java
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        50%
+                    </div>
+                </div>
+            </li>
+            <li>
+                Python
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        20%
+                    </div>
+                </div>
+            </li>
+            <li>
+                Javascript
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                        20%
+                    </div>
+                </div>
+            </li>
+            <li>BASH scripting
+                <div class="progress">
+                    <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+                        40%
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+        <h3>Computing Skills</h3>
+
+        <ul class="list-unstyled list-unstyled-left">
+            <li>Knowledge of Mac/Windows/Linux operating systems </li>
+            <li>Knowledge of HTML/CSS</li>
+        </ul>
+        <!-- Dropdown uses jquery so it is required IF used by bootstrap-->
+        <script type="text/javascript" src="/lib/jquery/dist/jquery.min.js"></script>
+            <script type="text/javascript" src="/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+            </div>
+    </div><!--row-->
+</div> <!-- container fluid-->
 </body>
 </html>
