--- a/Project2/src/Project2/wwwroot/index.html
+++ b/Project2/src/Project2/wwwroot/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/lib/bootswatch/cosmo/bootstrap.css" />
     <link rel="stylesheet" href="/lib/Font-Awesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="/styles.css"/>
 </head>
 <body>
     <!--navbar is the base class and invert changes normal colors-->
@@ -30,11 +30,11 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
 
-                <li><a href="/blog.html"><i class="fa fa-book"></i> Blog</a></li>
-                <li><a href="/resume.html"><i class="fa fa-bar-chart"></i> Resume</a></li>
+                <li><a href="/blog/blog.html"><i class="fa fa-book"></i> Blog</a></li>
+                <li><a href="/resume/resume.html"><i class="fa fa-bar-chart"></i> Resume</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/contact.html"><i class="fa fa-bullhorn"></i> Contact Me</a></li>
+                <li><a href="/contact/contact.html"><i class="fa fa-bullhorn"></i> Contact Me</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
         <!--</div>-->
