--- a/Project3/src/Project3/wwwroot/index.html
+++ b/Project3/src/Project3/wwwroot/index.html
@@ -1,38 +1,51 @@
 ﻿<!DOCTYPE html>
 <html ng-app="app">
+
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Github Search</title>
     <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="/lib/toastr/toastr.css"/>
-    <link rel="stylesheet" href="/site.css" type="text/css"/>
+    <link rel="stylesheet" href="/lib/toastr/toastr.css" />
+    <link rel="stylesheet" href="/site.css" type="text/css" />
 </head>
+
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" ui-sref="search">GitHub Search</a>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" ui-sref="search">GitHub Search</a>
+            </div>
         </div>
-    </div><!-- /.container-fluid -->
-</nav>
-<div class="container" ng-controller="appController">
-    <div ui-view></div>
-</div>
-<script src="/lib/jquery/dist/jquery.js" type="text/javascript"></script>
-<script src="/lib/angular/angular.js"></script>
-<script src="/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script src="/lib/toastr/toastr.js"></script>
-<script src="/lib/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
+        <!-- /.container-fluid -->
+    </nav>
+    <div class="container" ng-controller="appController">
+        <div ui-view></div>
+    </div>
+    <script src="/lib/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="/lib/angular/angular.js"></script>
+    <script src="/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="/lib/toastr/toastr.js"></script>
+    <script src="/lib/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
     <script src="/lib/angular-bootstrap-show-errors/src/showErrors.min.js" type="text/javascript"></script>
-<script src="/app.js" type="text/javascript"></script>
+    <script src="/app.js" type="text/javascript"></script>
+    <script src="/angularServices.js" type="text/javascript"></script>
+    <script src="/filters.js" type="text/javascript"></script>
+    <script src="/routes.js" type="text/javascript"></script>
+    <script src="/common/error/errorInterceptorFactory.js" type="text/javascript"></script>
+    <script src="/common/toastr/myToastrFactory.js" type="text/javascript"></script>
+    <script src="/repo/repoController.js" type="text/javascript"></script>
+    <script src="/search/searchController.js" type="text/javascript"></script>
+    <script src="/user/userController.js" type="text/javascript"></script>
+
 
 </body>
+
 </html>
