added angular service for adding todo

--- a/Project4/src/Project4/wwwroot/index.html
+++ b/Project4/src/Project4/wwwroot/index.html
@@ -29,6 +29,8 @@
     <div class="container" ng-controller="todoController">
         <!--<div ui-view></div>-->
         <button class="btn" ng-click="printScope()">Print scope</button>
+        <button class="btn" ng-click="printData()">Print data</button>
+        <button class="btn" ng-click="addItem()">Add Item</button>
     </div>
     <!--<div class="container" ng-controller="settingsController">
         <label>Settings</label><br />
