--- a/Project4/src/Project4/wwwroot/index.html
+++ b/Project4/src/Project4/wwwroot/index.html
@@ -31,6 +31,7 @@
         <button class="btn" ng-click="printScope()">Print scope</button>
         <button class="btn" ng-click="printData()">Print data</button>
         <button class="btn" ng-click="addItem()">Add Item</button>
+        <button class="btn" ng-click="updateTodo()">Update Item</button>
     </div>
     <!--<div class="container" ng-controller="settingsController">
         <label>Settings</label><br />
