--- a/Project4/src/Project4/wwwroot/warning.html
+++ b/Project4/src/Project4/wwwroot/warning.html
@@ -1,10 +1,36 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html >
+<html ng-app="app">
 <head>
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body>
-<p>hello ther</p>
+<body ng-controller="todoController" ng-init="printData()">
+<div ng-model="warningDays">
+    <h1>Settings</h1>
+    <h3>Change warning duration</h3>
+    <p>The days are getting shorter...<b>Change the number of days until the yellow warn status is activated:</b></p>
+    <input type="text" ng-model="warningDays" my-enter="updateWarning()">
+    <button class="btn" ng-click="updateWarning()">Submit</button>
+
+
+</div>
+
+
+
+    <script src="/lib/jquery/dist/jquery.js" type="text/javascript"></script>
+    <script src="/lib/angular/angular.js"></script>
+    <script src="/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="/lib/toastr/toastr.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
+    <script src="/lib/angular-bootstrap-show-errors/src/showErrors.min.js" type="text/javascript"></script>
+    <script src="/lib/bootstrap-table/src/bootstrap-table.js" type="text/javascript"></script>
+    <script src="/lib/bootstrap-table/src/extensions/editable/bootstrap-table-editable.js" type="text/javascript"></script>
+    <script src="popover.js" type="text/javascript"></script>
+
+    <script src="/app.js" type="text/javascript"></script>
+    <script src="/filters.js" type="text/javascript"></script>
+    <script src="/todoController.js" type="text/javascript"></script>
+    <script src="/angularServices.js" type="text/javascript"></script>
+    <script src="lib/moment/moment.js" type="text/javascript"></script>
 </body>
 </html>
